added start script

--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
       Lat: <span id="latitude"></span>
       Lon: <span id="longitude"></span>
     </p>
-    <button id="tase" onClick=buzz()>TASE</button><br>
+    <button id="tase" onclick=buzz()>TASE</button><br>
     <span id="showBuzz"></span>
     
     <script>
