--- a/public/play.html
+++ b/public/play.html
@@ -17,7 +17,7 @@
       <li><a href="Play.html">Play</a></li>
     </ul>
     <h1>Spark-Fun</h1>
-    <button id="tase" onClick=buzz()>TASE</button><br>
+    <button id="tase" onclick=buzz()>TASE</button><br>
     <span id="showBuzz"></span>
     <script>
       // This function will handle events when the taser button is pressed. Events include animation of taser
