--- a/public/play.html
+++ b/public/play.html
@@ -14,7 +14,7 @@
   <body>
     <ul>
       <li><a href="index.html">Home</a></li>
-      <li><a href="Play.html">Play</a></li>
+      <li><a href="play.html">Play</a></li>
     </ul>
     <h1>Spark-Fun</h1>
     <button id="tase" onclick=buzz()>TASE</button><br>
