--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="Play.html">Play</a></li>
+        <li><a href="play.html">Play</a></li>
       </ul>
     </nav>
     <h1>Spark-Fun</h1>
