--- a/public/index.html
+++ b/public/index.html
@@ -66,7 +66,7 @@
       // This function will handle events when the taser button is pressed. Events include animation of taser
       // as well as accessing components of mobile devices including speaker, vibrate, and flashlight.
       function buzz() {
-        document.getElementById('showBuzz').textContent = 'Buzz';
+        document.getElementById('showBuzz').textContent = 'Buzzing';
         navigator.vibrate(200); // vibrate for 200ms
         navigator.vibrate([100,30,100,30,100,30,200,30,200,30,200,30,100,30,100,30,100]);
       }
