--- a/public/index.html
+++ b/public/index.html
@@ -67,8 +67,10 @@
       // as well as accessing components of mobile devices including speaker, vibrate, and flashlight.
       function buzz() {
         document.getElementById('showBuzz').textContent = 'Buzzing';
-        navigator.vibrate(200); // vibrate for 200ms
-        navigator.vibrate([100,30,100,30,100,30,200,30,200,30,200,30,100,30,100,30,100]);
+        if(navigator) {
+          navigator.vibrate(200); // vibrate for 200ms
+          navigator.vibrate([100,30,100,30,100,30,200,30,200,30,200,30,100,30,100,30,100]);
+        }
       }
     </script>
   </body>
